# ntl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml
adapters/legacy/: Cargo.toml
adapters/legacy/src/: lib.rs
adapters/web2/: Cargo.toml
adapters/web2/src/: lib.rs
adapters/web3/: Cargo.toml
adapters/web3/src/: lib.rs
benchmarks/: Cargo.toml
benchmarks/benches/: signal_benchmarks.rs
docs/: README.md  architecture.mdx  docs.json  introduction.mdx  package.json  why-ntl.mdx
docs/adapters/: legacy-api.mdx  overview.mdx  web2.mdx  web3.mdx
docs/api-reference/: adapter.mdx  node.mdx  overview.mdx  signal.mdx  synapse.mdx
docs/concepts/: activation.mdx  propagation.mdx  signals.mdx  synapses.mdx  topology.mdx
docs/governance/: contributing.mdx  rfc-process.mdx  roadmap.mdx
docs/guides/: building-adapters.mdx  first-signal.mdx  quickstart.mdx  siafu-integration.mdx
docs/research/: 01-signal-primitive.mdx  02-machine-learning-principles.mdx  03-neural-network-base-layer.mdx  04-network-transport-ipv6.mdx  05-twelve-principles.mdx  06-first-steps.mdx  overview.mdx
docs/security/: identity.mdx  overview.mdx  pluggable-crypto.mdx  post-quantum.mdx
docs/spec/: activation-model.mdx  adapter-contract.mdx  crypto-interface.mdx  overview.mdx  propagation-rules.mdx  signal-format.mdx  synapse-lifecycle.mdx
examples/echo-node/: Cargo.toml
examples/echo-node/src/: main.rs
examples/kv-store/: Cargo.toml
examples/kv-store/src/: main.rs
rfcs/: 0000-template.md
runtime/ntl-cli/: Cargo.toml
runtime/ntl-cli/src/: main.rs
runtime/ntl-core/: Cargo.toml
runtime/ntl-core/src/: activation.rs  adapter.rs  config.rs  crypto.rs  error.rs  lib.rs  node.rs  propagation.rs  signal.rs  synapse.rs  testing.rs  topology.rs
runtime/ntl-edge/: Cargo.toml
runtime/ntl-edge/src/: main.rs
runtime/ntl-node/: Cargo.toml
runtime/ntl-node/src/: main.rs
