[package]
name = "ntl-cli"
description = "Command-line interface for the Nyuchi Transfer Layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ntl"
path = "src/main.rs"

[dependencies]
ntl-core.workspace = true
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
colored.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
