[package]
name = "ntl-core"
description = "Core library for the Neural Transfer Layer — neural signal-based data transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bytes.workspace = true
ulid.workspace = true
blake3.workspace = true
rand.workspace = true
toml = "0.8"

# Post-quantum crypto (optional, default enabled)
pqcrypto-dilithium = { workspace = true, optional = true }
pqcrypto-kyber = { workspace = true, optional = true }
aes-gcm.workspace = true

# Classical crypto (optional)
ed25519-dalek = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }

# Networking
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true

[features]
default = ["pq-crypto", "classical-crypto"]
pq-crypto = ["dep:pqcrypto-dilithium", "dep:pqcrypto-kyber"]
classical-crypto = ["dep:ed25519-dalek", "dep:x25519-dalek"]
hybrid-crypto = ["pq-crypto", "classical-crypto"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
